# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr)
project(app1)

target_include_directories(app PRIVATE ${ZEPHYR_BASE}/subsys/net/ip)

set (RE_DEFINITIONS
	-DHAVE_ARC4RANDOM;-DHAVE_UNISTD_H;-DHAVE_THREADS;-DHAVE_ACCEPT4;-D_GNU_SOURCE;-DHAVE_ATOMIC;-DHAVE_SELECT;-DHAVE_PWD_H;-DHAVE_ROUTE_LIST;-DHAVE_SETRLIMIT;-DHAVE_STRERROR_R;-DHAVE_STRINGS_H;-DHAVE_SYS_TIME_H;-DHAVE_UNAME;-DHAVE_SELECT_H;-DHAVE_FORK;-DHAVE_GETIFADDRS;-DUSE_MBEDTLS;-DHAVE_UNIXSOCK=1;-DLINUX;-DARCH="arm";-DOS="Generic";-DRELEASE;-DRE_VERSION="3.3.0")
message("RE_DEFINITIONS=${RE_DEFINITIONS}")
target_sources(app PRIVATE src/main.c)
